--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
   <title>Google Sheets API Demo</title>
 </head>
 <body>
-  <h2>People List</h2>
-  <table border="1" id="sheet-data">
-    <thead>
-      <tr><th>Name</th><th>Age</th><th>City</th></tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <h2>Sensor Readings</h2>
+    <table border="1" id="sensor-table">
+      <thead>
+        <tr>
+          <th>Timestamp</th>
+          <th>Humidity</th>
+          <th>Temperature</th>
+          <th>Point Dendrometer</th>
+          <th>Lidar Dendrometer</th>
+          <th>Battery State</th>
+          <th>Battery Voltage</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
   <script>
     const API_KEY = 'AIzaSyDW_7GZ4trK1A6hr7gyaFf9bMD0KDJGxm8'; // Replace with your actual API key
@@ -22,26 +30,46 @@
     fetch(url)
       .then(response => response.json())
       .then(data => {
-        const tableBody = document.querySelector('#sheet-data tbody');
         const rows = data.values;
 
-        if (!rows) {
-          tableBody.innerHTML = '<tr><td colspan="3">No data found.</td></tr>';
-          return;
-        }
+        // Step 1: Group by timestamp
+        const groupedData = {};
+        rows.forEach(([type, timestamp, value]) => {
+          if (!groupedData[timestamp]) {
+            groupedData[timestamp] = {};
+          }
+          groupedData[timestamp][type.toLowerCase()] = value;
+        });
 
-        rows.forEach(row => {
+        // Step 2: Render HTML Table
+        const tbody = document.querySelector('#sensor-table tbody');
+        for (const [timestamp, sensors] of Object.entries(groupedData)) {
           const tr = document.createElement('tr');
-          row.forEach(cell => {
+
+          const tdTime = document.createElement('td');
+          tdTime.textContent = timestamp;
+          tr.appendChild(tdTime);
+
+          const columns = [
+            'humidity',
+            'temperature',
+            'point dendrometer',
+            'lidar dendrometer',
+            'battery state',
+            'battery voltage'
+          ];
+
+          columns.forEach(col => {
             const td = document.createElement('td');
-            td.textContent = cell;
+            td.textContent = sensors[col] || '-';
             tr.appendChild(td);
           });
-          tableBody.appendChild(tr);
-        });
+
+          tbody.appendChild(tr);
+        }
       })
-      .catch(err => {
-        console.error('Error loading Google Sheet data:', err);
+      .catch(error => {
+        console.error('Error fetching data:', error);
       });
   </script>
 </body>
