--- a/treeData.html
+++ b/treeData.html
@@ -58,7 +58,7 @@
     // Fetch data from Google Sheets API
     const API_KEY = 'AIzaSyBWq6_OOSDWjRS5j5Oco-TRAFtZRGMnwPA'; // Replace with your actual API key
     const SHEET_ID = '1ik-hGF90uWHn2UCbzIJIQO_qhCTvhT1YTB4KH1C9-xQ'; // Replace with your spreadsheet ID
-    const RANGE = 'unsorteddata!A2:C'; // Adjust range as needed
+    const RANGE = 'alldata!A2:C'; // Adjust range as needed
 
     const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`;
     // https://sheets.googleapis.com/v4/spreadsheets/1ik-hGF90uWHn2UCbzIJIQO_qhCTvhT1YTB4KH1C9-xQ/values/unsorteddata!A2:C?key=AIzaSyBWq6_OOSDWjRS5j5Oco-TRAFtZRGMnwPA
@@ -91,7 +91,7 @@
             'humidity',
             'temperature',
             'point dendrometer',
-            'lidar dendrometer',
+            'LD',
             'battery state',
             'battery voltage'
           ];
