--- a/treeData.html
+++ b/treeData.html
@@ -51,8 +51,9 @@
 
   <div class="graph-grid">
     <canvas id='batteryChart' ></canvas>
-    <canvas id="batteryPercent"></canvas>
+    
   </div>
+  <canvas id="batteryPercent" width="100" height="100"></canvas>
      
 
   <script>
