--- a/treeData.html
+++ b/treeData.html
@@ -51,9 +51,10 @@
 
   <div class="graph-grid">
     <canvas id='batteryChart' ></canvas>
-    
+    <canvas id="batteryPercent" width="200px" height="200px"></canvas>
   </div>
-  <canvas id="batteryPercent" width="100" height="100"></canvas>
+  
+ 
      
 
   <script>
