--- a/treeData.html
+++ b/treeData.html
@@ -246,6 +246,8 @@
                 }]
               },
               options: {
+                responsive: false, // <- important!
+                maintainAspectRatio: false, // <- allows fixed dimensions
                 cutout: '70%',
                 plugins: {
                   legend: { display: false },
