team added to homepage

--- a/index.html
+++ b/index.html
@@ -47,12 +47,31 @@
     
 
   <!-- Team Section -->
-  <section id="team">
-    <h3 class="section-title">Team</h3>
+<section id="team">
+  <h3 class="section-title">Meet the Team</h3>
 
-    <div class="card">
+  <div class="team-member">
+    <img src="Screenshot 2025-06-13 at 10.06.49 AM.png" alt="Dr. Taylor Jones photo">
+    <div>
       <h4>Dr. Taylor Jones</h4>
-      <p></p>
+      <p>Professor in the Earth Commons Institute at Georgetown University. Dr. Jones specializes in satellite remote sensing and environmental instrumentation, developing custom sensors for monitoring greenhouse gases and ecological systems.</p>
     </div>
+  </div>
 
-  </section>
+  <div class="team-member">
+    <img src="Screenshot 2025-06-13 at 10.07.12 AM.png" alt="Dr. Jonathan Dooley photo">
+    <div>
+      <h4>Dr. Jonathan Dooley</h4>
+      <p>Postdoctoral Fellow at the Earth Commons Institute at Georgetown University. Dr. Dooley's research focuses on satellite-based greenhouse gas monitoring and advancing techniques to interpret large-scale atmospheric data.</p>
+    </div>
+  </div>
+
+  <div class="team-member">
+    <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Emma Lindbergh photo">
+    <div>
+      <h4>Emma Lindbergh</h4>
+      <p>Undergraduate student at Georgetown University pursuing a dual major in Computer Science and Environmental Studies. Emma works on data visualization and analysis for satellite and sensor-based climate research projects.</p>
+    </div>
+  </div>
+</section>
+
