--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,22 @@
       <a href="team.html">Team</a>
     </nav>
   </header>
-  <section>
+  <section class="hero">
     <h2>Projects</h2>
-    <p>Details about the projects go here.</p>
+    <p>Explore our ongoing projects focused on ecological monitoring and atmospheric carbon tracking.</p>
   </section>
+
+  <div class="card">
+    <h4>Urban Tree Ecophysiology Network</h4>
+    <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.</p>
+    <nav>
+      <a href="treeData.html">View Live Data →</a>
+    </nav>
+  </div>
+  <div class="card">
+    <h4>Project</h4>
+    <p>Details about project</p>
+
+  </div>
 </body>
 </html>
