--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     </nav>
   </header>
   <section class="hero">
-    <h2>Projects</h2>
+    <h2>Current Projects</h2>
     <p>Explore our ongoing projects focused on ecological monitoring and atmospheric carbon tracking.</p>
   </section>
 
