--- a/treeData.html
+++ b/treeData.html
@@ -107,10 +107,10 @@
 
   // Step 1: Build separate arrays for each sensor type
   const sensorData = {
-    temperature: [],
-    humidity: [],
+    "temperature": [],
+    "humidity": [],
     "point dendrometer": [],
-    ld: [],
+    "ld": [],
     "battery state": [],
     "battery voltage": []
   };
