--- a/treeData.html
+++ b/treeData.html
@@ -280,7 +280,7 @@
     
           const weatherTemp = sensor.data.map(d => ({
             x: new Date(d.ts * 1000),
-            y: d.temp_out
+            y: (d.temp_out - 32) * 5 / 9 // Convert from Fahrenheit to Celsius
           }));
     
           const weatherHum = sensor.data.map(d => ({
