--- a/treeData.html
+++ b/treeData.html
@@ -288,7 +288,7 @@
             y: d.hum_out
           }));
     
-          drawChart("combinedTempChart", "Temperature (°F)", [
+          drawChart("combinedTempChart", "Temperature (°C)", [
             { label: "Local Temperature", data: sensorData["temperature"], color: "#f97316" },
             { label: "Weather API Temperature", data: weatherTemp, color: "#ef4444" }
           ], true);
