--- a/treeData.html
+++ b/treeData.html
@@ -257,8 +257,8 @@
             "humidity": [],
             "point dendrometer": [],
             "ld": [],
-            "battery voltage": [],
-            "battery state": []
+            "battery state": [],
+            "battery voltage": []
           };
     
           rows.forEach(([type, epochtime, timestamp, value]) => {
