--- a/treeData.html
+++ b/treeData.html
@@ -24,7 +24,7 @@
   <section class="hero">
     <h2>Urban Tree Ecophysiology Network</h2>
     <p>
-     Data from a sugar maple located on Georgetown's campus in Washington, D.C. This tree is part of the Urban Trees Ecophysiology Network (UTEN), a network of researchers aiming to understand the urban trees response to climate change.
+     Data from a sugar maple (Acer saccharum) located on Georgetown's campus in Washington, D.C. This tree is part of the Urban Trees Ecophysiology Network (UTEN), a network of researchers aiming to understand the urban trees response to climate change.
      The data is collected using a variety of sensors.
     </p>
 
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script>
       // Initialize the map
-      var map = L.map('map').setView([38.90781, -77.07416], 17); // Set initial view to San Francisco
+      var map = L.map('map').setView([38.90781, -77.07416], 16); 
     
       // Add OpenStreetMap tiles
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
