--- a/treeData.html
+++ b/treeData.html
@@ -24,7 +24,9 @@
   <section class="hero">
     <h2>Urban Tree Ecophysiology Network</h2>
     <p>
-     Data from a sugar maple (Acer saccharum) located on Georgetown's campus in Washington, D.C. This tree is part of the Urban Trees Ecophysiology Network (UTEN), a network of researchers aiming to understand the urban trees response to climate change.
+     We are collecting data from a sugar maple (Acer saccharum) located on Georgetown's campus in Washington, D.C. 
+     This tree is part of the Urban Trees Ecophysiology Network (UTEN), a network of researchers aiming to understand the 
+     urban trees response to climate change.
      The data is collected using a variety of sensors.
     </p>
 
@@ -143,9 +145,10 @@
   </section>
   
 
-
+  
  
     <h2>Raw Sensor Readings</h2>
+    <button id="download-json">Download Data</button>
     <table border="1" id="sensor-table">
       <thead>
         <tr>
