--- a/treeData.html
+++ b/treeData.html
@@ -148,7 +148,9 @@
   
  
     <h2>Raw Sensor Readings</h2>
-    <button id="download-json">Download Data</button>
+    <a href="https://atmosjoneslab.github.io/data.json" download="data.json">
+      <button>Download Data</button>
+    </a>
     <table border="1" id="sensor-table">
       <thead>
         <tr>
