--- a/treeData.html
+++ b/treeData.html
@@ -57,9 +57,8 @@
       });
     </script>
 
-  <div>
-    <h2>Data from the Sugar Maple</h2>
-  </div>
+<section id="weather-section">
+  <h2 class="section-title">Data from Sugar Maple</h2>
   
 
   
@@ -97,6 +96,7 @@
       </div>
     </div>
   </div>
+</section>
      
 
   <script>
@@ -137,10 +137,7 @@
     </div>
 
   
-    <div class="chart-grid" id="weatherCards">
-      <!-- Weather cards injected by JavaScript -->
-    </div>
-  
+   
     <p class="footer" id="weatherFooter"></p>
   </section>
   
