projects and layout updates!

--- a/index.html
+++ b/index.html
@@ -40,8 +40,18 @@
     </div>
 
     <div class="card">
-      <h4>Project</h4>
-      <p>Project discription</p>
+      <h4>OCO-2 and Solar Induced Flourescence (SIF) </h4>
+      <p>
+        The Orbiting Carbon Observatory-2 (OCO-2) is capable of measuring Solar-Induced chlorophyll Fluorescence (SIF). 
+        SIF helps us understand terrestrial photosynthesis which furthers our understanding of carbon dioxide in our atmosphere. </p>
+    </div>
+
+    <div class="card">
+      <h4>Ribbonized Sap Flow Sensor </h4>
+      <p>
+        The Ribbonized Sap Flow (RSF) sensor is a novel design for measuring sap flow in trees.
+        It is designed to be low-cost, easy to deploy, and capable of long-term monitoring of tree water use.
+         </p>
     </div>
 
     
@@ -51,7 +61,7 @@
   <h3 class="section-title">Meet the Team</h3>
 
   <div class="team-member">
-    <img src="Screenshot 2025-06-13 at 11.12.58 AM.png" alt="Dr. Taylor Jones photo">
+    <img src="Screenshot 2025-06-20 at 12.08.29 PM.jpeg" alt="Dr. Taylor Jones photo">
     <div>
       <h4>Dr. Taylor Jones</h4>
       <p>Professor in the Earth Commons Institute at Georgetown University. Dr. Jones specializes in satellite remote sensing and environmental instrumentation, developing custom sensors for monitoring greenhouse gases and ecological systems.</p>
@@ -59,7 +69,7 @@
   </div>
 
   <div class="team-member">
-    <img src="Screenshot 2025-06-13 at 11.13.12 AM.png" alt="Dr. Jonathan Dooley photo">
+    <img src="Screenshot 2025-06-20 at 12.08.49 PM.jpeg" alt="Dr. Jonathan Dooley photo">
     <div>
       <h4>Dr. Jonathan Dooley</h4>
       <p>Postdoctoral Fellow at the Earth Commons Institute at Georgetown University. Dr. Dooley's research focuses on satellite-based greenhouse gas monitoring and advancing techniques to interpret large-scale atmospheric data.</p>
