--- a/treeData.html
+++ b/treeData.html
@@ -143,8 +143,10 @@
   
 
   
+  
+  <h2 class="section-title">Raw Sensor Readings</h2>
  
-    <h2>Raw Sensor Readings</h2>
+    
     <a href="https://atmosjoneslab.github.io/data.json" download="data.json">
       <button>Download Data</button>
     </a>
