--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Emma Lindbergh photo">
     <div>
       <h4>Emma Lindbergh</h4>
-      <p>Undergraduate student at Georgetown University pursuing a dual major in Computer Science and Environmental Studies. Emma works on data visualization and analysis for satellite and sensor-based climate research projects.</p>
+      <p>Undergraduate student at Georgetown University pursuing a major in Computer Science and a minor in Environmental Studies.</p>
     </div>
   </div>
 </section>
