--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
     </div>
     
     <div class="team-member">
-      <img src="Screenshot 2025-06-13 at 11.13.12 AM.png" alt="Team member photo">
+      <img src="Screenshot 2025-06-20 at 12.08.29 PM.jpeg" alt="Team member photo">
       <div>
         <h3>Jonathan Dooley, Ph.D.</h3>
         <p>Postdoctoral Fellow at the Earth Commons Institute at Georgetown University. Dr. Dooley's research focuses on 
@@ -100,7 +100,7 @@
     </div>
     
     <div class="team-member">
-      <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Team member photo">
+      <img src="Screenshot 2025-06-20 at 12.08.49 PM.jpeg" alt="Team member photo">
       <div>
         <h3>Emma Lindbergh</h3>
         <p>Undergraduate student at Georgetown University pursuing a major in Computer Science and a minor in Environmental Studies.
