--- a/team.html
+++ b/team.html
@@ -82,7 +82,7 @@
     <h2>Meet the Team</h2>
 
     <div class="team-member">
-      <img src="Screenshot 2025-06-13 at 11.12.58 AM.png" alt="Team member photo">
+      <img src="Screenshot 2025-06-20 at 12.08.29 PM.jpeg" alt="Team member photo">
       <div>
         <h3>Taylor Jones, Ph.D.</h3>
         <p>Professor in the Earth Commons Institute at Georgetown University. Dr. Jones specializes in satellite remote sensing 
@@ -91,7 +91,7 @@
     </div>
     
     <div class="team-member">
-      <img src="Screenshot 2025-06-20 at 12.08.29 PM.jpeg" alt="Team member photo">
+      <img src="Screenshot 2025-06-20 at 12.08.49 PM.jpeg" alt="Team member photo">
       <div>
         <h3>Jonathan Dooley, Ph.D.</h3>
         <p>Postdoctoral Fellow at the Earth Commons Institute at Georgetown University. Dr. Dooley's research focuses on 
@@ -100,7 +100,7 @@
     </div>
     
     <div class="team-member">
-      <img src="Screenshot 2025-06-20 at 12.08.49 PM.jpeg" alt="Team member photo">
+      <img src="BC0AB515-5EAC-41D7-AFD2-DC2AC259B96D.jpeg" alt="Team member photo">
       <div>
         <h3>Emma Lindbergh</h3>
         <p>Undergraduate student at Georgetown University pursuing a major in Computer Science and a minor in Environmental Studies.
