--- a/treeData.html
+++ b/treeData.html
@@ -404,7 +404,7 @@
             { label: "Rainfall", data: weatherRainfall, color: "#0ea5e9" }
           ]);
 
-          drawChart('weatherSolar', "Solar Radiation (watts per m^2)", [
+          drawChart('weatherSolar', "Solar Radiation (watts per square meter)", [
             { label: "Solar Radiation", data: weatherSolar, color: "#ffde21" }
           ]);
         })
