--- a/treeData.html
+++ b/treeData.html
@@ -31,7 +31,8 @@
     </p>
 
   </section>
-    <h2>Map of Data Locations</h2>
+    <h2 class="section-title">Map of Data Locations</h2>
+  
     <div id="map"></div>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script>
