--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,10 @@
     <p>Explore our ongoing projects focused on ecological monitoring and atmospheric carbon tracking.</p>
   </section>
 
+ <!-- Projects Section -->
+ <section id="projects">
+  <h3 class="section-title">Projects</h3>
+
   <div class="card">
     <h4>Urban Tree Ecophysiology Network</h4>
     <p>The Urban Trees Ecophysiology Network (UTEN) is a network of researchers aiming to understand the urban trees response to climate change.</p>
@@ -27,10 +31,20 @@
       <a href="treeData.html">View Live Data →</a>
     </nav>
   </div>
-  <div class="card">
-    <h4>Project</h4>
-    <p>Details about project</p>
 
+  <div class="card">
+    <h4>OCO-2 and Solar Induced Flourescence (SIF) </h4>
+    <p>
+      The Orbiting Carbon Observatory-2 (OCO-2) is capable of measuring Solar-Induced chlorophyll Fluorescence (SIF). 
+      SIF helps us understand terrestrial photosynthesis which furthers our understanding of carbon dioxide in our atmosphere. </p>
   </div>
-</body>
+
+  <div class="card">
+    <h4>Ribbonized Sap Flow Sensor </h4>
+    <p>
+      The Ribbonized Sap Flow (RSF) sensor is a novel design for measuring sap flow in trees.
+      It is designed to be low-cost, easy to deploy, and capable of long-term monitoring of tree water use.
+       </p>
+  </div>
 </html>
+
