--- a/treeData.html
+++ b/treeData.html
@@ -315,12 +315,19 @@
           for (const key in sensorData) {
             sensorData[key].sort((a, b) => a.x - b.x);
           }
-          const fs = require('fs');
-          const fetch = require('node-fetch');
+          // const fs = require('fs');
+          // const fetch = require('node-fetch');
 
           const json = JSON.stringify(sensorData);
-          fs.writeFileSync('prettydata.json', json);
-    
+          console.log(json);
+          // fs.appendFile('prettydata.json', json, (err) => {
+          // if (err) {
+          //   console.error('Error writing file:', err);
+          // } else {
+          //   console.log('File written successfully!');
+          // }
+          // });
+        
 
           // --- Build local data table ---
           const tableBody = document.querySelector("#sensor-table tbody");
