--- a/treeData.html
+++ b/treeData.html
@@ -148,7 +148,7 @@
   <h2 class="section-title">Raw Sensor Readings</h2>
  
     
-    <a href="https://atmosjoneslab.github.io/data.json" download="data.json">
+    <a href="https://atmosjoneslab.github.io/prettydata.json" download="prettydata.json">
       <button>Download Data</button>
     </a>
     <table border="1" id="sensor-table">
